@@ -1,4 +1,4 @@
-$Id: History,v 1.17 2002-06-06 09:55:19 johna Exp $
+$Id: History,v 1.18 2002-06-19 15:48:00 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,9 @@ committal in the CVS repository !
 
 History file for visualization/OpenGL
 -------------------------------------
+
+10th June 2002  John Allison  (opengl-V04-00-03)
+- Cosmetic changes for SUN-CC in G4OpenGLXmConvenienceRoutines.cc.
 
 6th June 2002  John Allison  (opengl-V04-00-02)
 - Cosmetic changes for GNU compiler in G4OpenGLXViewer.cc.
